新增 API 服务，使 Legado 可将 LuxTTS 配置为在线朗读引擎

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
   "cn2an",
+  "fastapi>=0.129.0",
   "gradio>=6.6.0",
   "huggingface-hub",
   "inflect",
@@ -24,6 +25,7 @@ dependencies = [
   "torch",
   "torchaudio",
   "transformers<=4.57.6",
+  "uvicorn>=0.41.0",
   "vocos",
 ]
 
